# mded

./: .gitignore  MDed.desktop  README.md  TODO.md  app.js  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  quick-note.html  run.sh  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
.kiro/specs/codemirror-migration/: design.md  requirements.md  tasks.md
.kiro/specs/mded-tauri-migration/: design.md  requirements.md  tasks.md
.orchids/: orchids.json
src/: main.ts  preload.ts
src-tauri/: Cargo.toml  mded.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/: shortcuts.txt
src-tauri/src/: config.rs  filesystem.rs  lib.rs  models.rs  shortcuts.rs  tray.rs  window.rs
src-tauri/src/commands/: config.rs  folders.rs  mod.rs  notes.rs  system.rs  window.rs
src/renderer/: api.ts  app.ts  global.d.ts  quick-note.ts  types.ts
src/renderer/__tests__/: codemirror-editor-manager.test.ts  editor-manager.test.ts  setup.ts
src/renderer/editor/: codemirror-editor-manager.ts
src/renderer/managers/: editor-manager.ts  keyboard-shortcuts.ts  modal-manager.ts  note-manager.ts  shortcut-manager.ts  tab-manager.ts  ui-manager.ts
