[package]
name = "mded"
version = "2.0.0"
description = "Minimalistic Markdown Editor with VisionOS glassmorphism design"
authors = ["henilptel <henilptel@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "mded_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync", "time"] }
dirs = "6"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
